...
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WDw-de-7oq">
                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                <animations/>
                                <accessibility key="accessibilityConfiguration" identifier="ButtonDismiss"/>
                                <connections>
                                    <action selector="didClickOnDismissButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="SiW-yi-cqw"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uIo-mn-Kp4">
                                <rect key="frame" x="20" y="28" width="560" height="72"/>
...
                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="$6,340.00" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dqd-hh-LLP">
                                <rect key="frame" x="20" y="199" width="560" height="60"/>
                                <animations/>
                                <accessibility key="accessibilityConfiguration" identifier="FieldAUD"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="wFY-Lk-DeP"/>
                                </constraints>
                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="50"/>
                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
...
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="m21-j0-cZE"/>
                                </connections>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="€2,590.00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZDK-oo-yBF">
                                <rect key="frame" x="20" y="401" width="550" height="60"/>
                                <animations/>
                                <accessibility key="accessibilityConfiguration" identifier="LabelConverted"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="glt-Mt-P03"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="50"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
...
